tests/NormalTests/paczka1/small_fuzzy/88405795.err
Error in line 1: rxFi9KDYzz S213 72,1
Error in line 3: pTUxF S79 83,7
Error in line 8: pTUxF A902 3,6
